--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <img src="/Noritomo_Ams.JPG" alt="">
                 </figure>
                 <div class="right">
-                    <p> I'm Yuma Noritomo, a PhD student at Dyson, Cornell. I visited PSE in Fall 2024, with shorter visits at Utrecht and the DEC at Wageningen. e-mail: yn266[at]cornell.edu </p>
+                    <p> I'm Yuma Noritomo, a PhD student at Dyson, Cornell. I visited PSE in Fall 2024, with shorter visits at Utrecht and DEC at Wageningen. e-mail: yn266[at]cornell.edu </p>
                     <p> My research focuses on strategies to reduce chronic poverty through human capital accumulation in developing countries. </p>                        
                 </div>
             </div>
