--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <img src="/Noritomo_Ams.JPG" alt="">
                 </figure>
                 <div class="right">
-                    <p> I'm Yuma Noritomo, a PhD student at Dyson, Cornell. I visited PSE in Fall 2024, with shorter research visits at Utrecht and DEC at Wageningen. e-mail: yn266[at]cornell.edu </p>
+                    <p> I'm Yuma Noritomo, a PhD student at Dyson, Cornell. I visited PSE in Fall 2024, with shorter research visits at Utrecht and DEC at Wageningen. Reach out to me at yn266[at]cornell.edu </p>
                     <p> My research focuses on strategies to reduce chronic poverty through human capital accumulation in developing countries. </p>                        
                 </div>
             </div>
@@ -111,8 +111,8 @@
                             <li>Yuma Noritomo. <strong>Does the timing of productivity shocks in childhood affect educational attainment?</strong> <i>Kanematsu Award</i>, <i>Nishijima Award</i> </li>
                             <li>Christopher Barrett, Nathan Jensen, Karlijn Morsink, Yuma Noritomo, Hyuk Harry Son, Rupsha Banerjee, and Nils Teufel. <a href="https://www.dropbox.com/scl/fi/nykh5bstdjtm1epwzi6vd/IBLI_Long-term_Barrett_et_al_2025March.pdf?rlkey=4yltzxx80e36lzbcpace8c1rx&st=4z3xsrn1&dl=0">Long-run effects of catastrophic drought insurance.<font color="blue"></font></a> [<a href="https://www.dropbox.com/scl/fi/saqnzojxpej3ty6u2gqx1/Barrett_et_al_Long-run_IBLI.pdf?rlkey=4wjqk77bsv3yry4l32zg1lsxj&st=mdupdyax&dl=0">slide<font color="blue"></font></a>] <i>Submitted</i> </li>
                             <li>Takuya Hasebe, Yuma Noritomo, and Bilesha Weeraratne. <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5220631">Restricting mothers' international migration and human capital investment.<font color="blue"></font></a> <i>Submitted</i> </li>
+                            <li>Yoshito Takasaki, Yuma Noritomo, Oliver Coomes, and Christian Abizaid. <strong> Site selection causes bias in policy-oriented social science. </strong> <i>Submitted</i> </li> 
                             <li>Yuma Noritomo and Karlijn Morsink. <strong> Trading off  human capital versus productive asset investment: perceptions of risk and return. </strong></li>
-                            <li>Yoshito Takasaki, Yuma Noritomo, Oliver Coomes, and Christian Abizaid. <strong> Site selection causes bias in policy-oriented social science. </strong></li> 
                             <!--<li>Yuma Noritomo and Hiroto Sato. <strong> Migration and human capital investment. </strong></li> -->
                             <!--<li>Yoshito Takasaki, Yuma Noritomo, Oliver Coomes, and Christian Abizaid. <strong> Research site selection bias in the assessment of rural livelihoods, poverty and inequality</strong></li>   
                             -->
@@ -120,14 +120,14 @@
                 
                         <h4 id="publication">Publication</h4>
                         <ul>
-                            <li>Jensen et al. <strong> Index-based livestock insurance to support pastoralists against droughts.</strong>  <i>Accepted at Food Policy</i></li>
+                            <li>Jensen et al. <strong> <a href="https://www.sciencedirect.com/science/article/pii/S0306919225001149"><font color="blue">Index-based livestock insurance to support pastoralists against droughts.</font></a></strong>  <i>Accepted at Food Policy</i></li>
                             <li>Yuma Noritomo and Kazushi Takahashi (2020). <a href="https://www.tandfonline.com/doi/full/10.1080/00220388.2020.1736281"><font color="blue">Can insurance payouts prevent a poverty trap? Evidence from randomised experiments in northern Kenya</font></a>, <i>The Journal of Development Studies</i>, 56(11), 2079-2096.</li>
                             <li>Kazushi Takahashi, Yuma Noritomo, Munenobu Ikegami, and Nathaniel D. Jensen (2020). <a href="https://www.sciencedirect.com/science/article/pii/S0306919220301147"><font color="blue">Understanding pastoralists' dynamic insurance uptake decisions: Evidence from four-year panel data in Ethiopia</font></a>, <i>Food Policy</i>, 95, 101910.</li>
                         </ul>
                     </div>
                 </article>
                 📝 I have been contributing to <a href="https://x.com/dmeconsg"><font color="blue">Development Micro-econometrics Study Group</font></a> (Japanese), <a href="https://www.pnas.org/journal-club"><font color="blue">PNAS journal club</font></a> </p>
-                🏊🚴🏃 A passionate <i>IRONMAN</i> athelete, racing in Frankfurt this year, and a proud finisher of Mont-Tremblant and Vitoria-Gasteiz.
+                🏊🚴🏃 A passionate <i>IRONMAN</i> athelete, a proud finisher of Mont-Tremblant, Vitoria-Gasteiz, and Frankfurt.
             </div>
         </main>
 </body>
