--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Noritomo Yuma</title>
+  <title>Yuma Noriomo</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -11,7 +11,7 @@
       padding: 0;
       background-color: #f5f5f5;
       color: #111;
-      line-height: 1.6;
+      line-height: 1.0;
     }
 
     .container {
@@ -83,46 +83,53 @@
     </p>
 
     <h2>Research</h2>
-    <ul>
-      <li class="spacer">
-        <strong>Meiji Japan</strong><br/>
-        <!-- <em>Job Market Paper</em><br/>
-        <a href="files/jmp_draft.pdf" target="_blank">Draft PDF</a>
-        <details>
-          <summary>Abstract</summary>
-          <p>[Abstract here]</p>
-        </details> -->
-      </li>
-      <li class="spacer">
-        <strong>Vocational training with intergroup contact for disabled people in Rwanda</strong><br/>
-        with Yoshito Takasaki, Mayuko Onuki, and Keitaro Aoyagi.<br/>
-        <!-- <a href="files/legal_capacity_draft.pdf" target="_blank">Draft PDF</a> -->
-        <!-- <details>
-          <summary>Abstract</summary>
-          <p>[Abstract here]</p>
-        </details> -->
-      </li>
-      <li>
-        <strong>Transition to broader-based politics: The role of suffrage extension in early 20th century Japan</strong><br/>
-        <a href="https://doi.org/10.1016/j.ejpoleco.2024.102499" target="_blank">Link</a>
-        <details>
-          <summary>Abstract</summary>
-          <p>The period of modern industrialisation is commonly characterised by gradual democratisation through enfranchisement and intra-elite competition between traditional landlords and emerging capitalists. This raises the question of whether the redistribution of de jure political power via suffrage expansion can catalyse the transition of intra-elite power structures, as reflected in political representation. This study explores the impact of suffrage extension, induced by the wartime tax increase in Japan during the mid-1900s, on the occupational composition of the House of Representatives. Employing a difference-in-differences approach, I demonstrate that the expansion of the electorate led to a significant decline in the seat shares of agricultural landlords, who initially constituted the dominant occupational group in the House. In consideration of the historical context, the overall findings suggest that suffrage extension likely played a crucial role in diversifying House politics away from a landlord-centred system.</p>
-        </details>
-      </li>
-      <li>
-        <strong>China's impact on regional employment: Propagation through input-output linkages and co-location patterns</strong><br/>
-        <a href="https://doi.org/10.1111/twec.13251" target="_blank">Link</a>
-        <details>
-          <summary>Abstract</summary>
-          <p>How do imports from China affect local labour markets in Japan? We examine this question using commuting zones as regional units and analysing shock propagation through supply chains and co-location patterns. Applying the method proposed by Autor et al. (American Economic Review, 103, 2121, 2013) and Acemoglu, Autor et al. (Journal of Labor Economics, 34, S141, 2016), we examine the impact of import shocks on regional manufacturing employment using input–output tables which allows us to investigate the propagation of shocks to both upstream and downstream industries and to relate the regional impact to industry co-location patterns. We find that the negative direct effect on local employment is underestimated in previous studies that do not consider the regional propagation of the shock through supply chains, especially the positive shock to downstream industries. Downstream industries in Japan, for example, significantly benefit from imports from China as they lower input prices and increase employment. In contrast to downstream industries, we find no significant impact on upstream industries. Our results imply that the direct negative effect on local labour markets is somewhat mitigated by effects on downstream industries within the same region.</p>
-        </details>
-      </li>
-    </ul>
 
-    <h2>CV</h2>
-    <p>
-      <a href="files/cv.pdf" target="_blank">Download my CV (PDF)</a>
+<ul>
+  <li class="spacer">
+    <strong>Yuma Noritomo.</strong> <a href="https://www.rieb.kobe-u.ac.jp/academic/ra/dp/English/dp2025-19.html">Does the timing of productivity shocks in childhood affect educational attainment?</a> <i>Kanematsu Award</i>, <i>Nishijima Award</i>
+  </li>
+  <li class="spacer">
+    <strong>Christopher Barrett, Nathan Jensen, Karlijn Morsink, Yuma Noritomo, Hyuk Harry Son, Rupsha Banerjee, and Nils Teufel.</strong> <a href="https://www.dropbox.com/scl/fi/nykh5bstdjtm1epwzi6vd/IBLI_Long-term_Barrett_et_al_2025March.pdf?rlkey=4yltzxx80e36lzbcpace8c1rx&st=4z3xsrn1&dl=0">Long-run effects of catastrophic drought insurance.</a> [<a href="https://www.dropbox.com/scl/fi/saqnzojxpej3ty6u2gqx1/Barrett_et_al_Long-run_IBLI.pdf?rlkey=4wjqk77bsv3yry4l32zg1lsxj&st=mdupdyax&dl=0">slide</a>] <i>Submitted</i>
+  </li>
+  <li class="spacer">
+    <strong>Takuya Hasebe, Yuma Noritomo, and Bilesha Weeraratne.</strong> <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5220631">Restricting mothers' international migration and human capital investment.</a> <i>Submitted</i>
+  </li>
+  <li class="spacer">
+    <strong>Yoshito Takasaki, Yuma Noritomo, Oliver Coomes, and Christian Abizaid.</strong> <strong>Site selection causes bias in policy-oriented social science.</strong> <i>Submitted</i>
+  </li>
+  <li class="spacer">
+    <strong>Yuma Noritomo and Karlijn Morsink.</strong> <strong>Trading off human capital versus productive asset investment: perceptions of risk and return.</strong>
+  </li>
+</ul>
+
+<h4 id="publication">Publication</h4>
+<ul>
+  <li class="spacer">
+    <strong>Jensen et al.</strong> <a href="https://www.sciencedirect.com/science/article/pii/S0306919225001149">Index-based livestock insurance to support pastoralists against droughts.</a> <i>Accepted at Food Policy</i>
+  </li>
+  <li class="spacer">
+    <strong>Yuma Noritomo and Kazushi Takahashi (2020).</strong> <a href="https://www.tandfonline.com/doi/full/10.1080/00220388.2020.1736281">Can insurance payouts prevent a poverty trap? Evidence from randomised experiments in northern Kenya</a>, <i>The Journal of Development Studies</i>, 56(11), 2079-2096.
+  </li>
+  <li class="spacer">
+    <strong>Kazushi Takahashi, Yuma Noritomo, Munenobu Ikegami, and Nathaniel D. Jensen (2020).</strong> <a href="https://www.sciencedirect.com/science/article/pii/S0306919220301147">Understanding pastoralists' dynamic insurance uptake decisions: Evidence from four-year panel data in Ethiopia</a>, <i>Food Policy</i>, 95, 101910.
+  </li>
+</ul>
+
+
+    <!-- <ul> -->
+      <!-- <li> -->
+        <!-- <strong>China's impact on regional employment: Propagation through input-output linkages and co-location patterns</strong><br/> -->
+        <!-- <a href="https://doi.org/10.1111/twec.13251" target="_blank">Link</a> -->
+        <!-- <details> -->
+          <!-- <summary>Abstract</summary> -->
+          <!-- <p>How do imports from China affect local labour markets in Japan? We examine this question using commuting zones as regional units and analysing shock propagation through supply chains and co-location patterns. Applying the method proposed by Autor et al. (American Economic Review, 103, 2121, 2013) and Acemoglu, Autor et al. (Journal of Labor Economics, 34, S141, 2016), we examine the impact of import shocks on regional manufacturing employment using input–output tables which allows us to investigate the propagation of shocks to both upstream and downstream industries and to relate the regional impact to industry co-location patterns. We find that the negative direct effect on local employment is underestimated in previous studies that do not consider the regional propagation of the shock through supply chains, especially the positive shock to downstream industries. Downstream industries in Japan, for example, significantly benefit from imports from China as they lower input prices and increase employment. In contrast to downstream industries, we find no significant impact on upstream industries. Our results imply that the direct negative effect on local labour markets is somewhat mitigated by effects on downstream industries within the same region.</p> -->
+        <!-- </details> -->
+      <!-- </li> -->
+    <!-- </ul> -->
+
+    <!-- <h2>CV</h2> -->
+    <!-- <p> -->
+      <!-- <a href="files/cv.pdf" target="_blank">Download my CV (PDF)</a> -->
     </p>
   </div>
 </body>
