--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
       margin-top: 2rem;
     }
 
-    a {
-      color: #e07b39;
-      text-decoration: none;
-    }
+a {
+  color: #add8e6; /* Light blue color */
+  text-decoration: none;
+}
 
-    a:hover {
-      text-decoration: underline;
-    }
+a:hover {
+  text-decoration: underline;
+}
 
     .header {
       display: flex;
@@ -70,19 +70,19 @@
 <body>
   <div class="container">
     <div class="header">
-      <img src="images/profile.jpg" alt="Profile Picture" class="profile-pic" />
+      <img src="Yuma_shoats.jpg" alt="Profile Picture" class="profile-pic" />
       <div>
         <h1>Noritomo Yuma</h1>
         <p>Ph.D. Student <br/>Cornell University</p>
       </div>
     </div>
 
-    <h2>About</h2>
+    <h4>About</h4>
     <p>
       I'm a Ph.D. student. <br/>
     </p>
 
-    <h2>Research</h2>
+    <h4>Working Paper / Work in Progress</h4>
 
 <ul>
   <li class="spacer">
