--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     }
 
 a {
-  color: #add8e6; /* Light blue color */
+  color: #1e90ff; /* Vivid light blue */
   text-decoration: none;
 }
 
@@ -72,15 +72,17 @@ a:hover {
     <div class="header">
       <img src="Yuma_shoats.jpg" alt="Profile Picture" class="profile-pic" />
       <div>
-        <h1>Noritomo Yuma</h1>
-        <p>Ph.D. Student <br/>Cornell University</p>
+        <h3>Noritomo Yuma</h3>
+                <p> I'm Yuma Noritomo, a PhD student at Dyson, Cornell. I visited PSE in Fall 2024, with shorter research visits at Utrecht and DEC at Wageningen. Reach out to me at yn266[at]cornell.edu </p>
+                <p> My research focuses on strategies to reduce chronic poverty through human capital accumulation in developing countries. </p>                        
+
       </div>
     </div>
 
-    <h4>About</h4>
+    <!-- <h4>About</h4>
     <p>
       I'm a Ph.D. student. <br/>
-    </p>
+    </p> -->
 
     <h4>Working Paper / Work in Progress</h4>
 
