--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@ a:hover {
   text-decoration: underline;
 }
 
+strong {
+  font-weight: 500; /* Lighter bold */
+}
+
     .header {
       display: flex;
       align-items: center;
@@ -97,10 +101,10 @@ a:hover {
     <strong>Takuya Hasebe, Yuma Noritomo, and Bilesha Weeraratne.</strong> <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5220631">Restricting mothers' international migration and human capital investment.</a> <i>Submitted</i>
   </li>
   <li class="spacer">
-    <strong>Yoshito Takasaki, Yuma Noritomo, Oliver Coomes, and Christian Abizaid.</strong> <strong>Site selection causes bias in policy-oriented social science.</strong> <i>Submitted</i>
+    <strong>Yoshito Takasaki, Yuma Noritomo, Oliver Coomes, and Christian Abizaid.</strong> Site selection causes bias in policy-oriented social science. <i>Submitted</i>
   </li>
   <li class="spacer">
-    <strong>Yuma Noritomo and Karlijn Morsink.</strong> <strong>Trading off human capital versus productive asset investment: perceptions of risk and return.</strong>
+    <strong>Yuma Noritomo and Karlijn Morsink.</strong> Trading off human capital versus productive asset investment: perceptions of risk and return.
   </li>
 </ul>
 
