--- a/index.html
+++ b/index.html
@@ -67,19 +67,19 @@ strong {
     }
 
     .spacer {
-      margin-bottom: 1rem;
+      margin-bottom: .5rem;
     }
   </style>
+
 </head>
 <body>
   <div class="container">
     <div class="header">
       <img src="Yuma_shoats.jpg" alt="Profile Picture" class="profile-pic" />
       <div>
-        <h3>Noritomo Yuma</h3>
-                <p> I'm Yuma Noritomo, a PhD student at Dyson, Cornell. I visited PSE in Fall 2024, with shorter research visits at Utrecht and DEC at Wageningen. Reach out to me at yn266[at]cornell.edu </p>
-                <p> My research focuses on strategies to reduce chronic poverty through human capital accumulation in developing countries. </p>                        
-
+        <h2>Yuma Noritomo</h2>
+                <p> I'm Yuma Noritomo, a PhD student at Dyson, Cornell. I visited PSE in Fall 2024, with shorter research visits at Utrecht and Wageningen. Reach out to me at yn266[at]cornell.edu </p>
+                <p> My research focuses on strategies to reduce chronic poverty through human capital accumulation in low-income, challenging settings. </p>                        
       </div>
     </div>
 
