--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@ strong {
     .header {
       display: flex;
       align-items: center;
-      gap: 1.5rem;
+      gap: 1rem;
     }
 
     .profile-pic {
-      width: 160px;
-      height: 160px;
+      width: 120px;
+      height: 120px;
       object-fit: cover;
       border-radius: 50%;
       flex-shrink: 0;
@@ -58,12 +58,12 @@ strong {
       }
 
       .profile-pic {
-        margin-bottom: 1rem;
+        margin-bottom: .5rem;
       }
     }
 
     details {
-      margin-bottom: 1rem;
+      margin-bottom: .5rem;
     }
 
     .spacer {
