--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
     .container {
       max-width: 800px;
       margin: auto;
-      padding: 2rem;
+      padding: 1rem;
     }
 
-    h1, h2,h3,h4 {
-      margin-top: 1rem;
+    h1,h2,h3,h4 {
+      margin-top: .5rem;
+      margin-bottom: .5rem; 
     }
 
 a {
@@ -89,7 +90,6 @@ strong {
     </p> -->
 
     <h4>Working Paper / Work in Progress</h4>
-
 <ul>
   <li class="spacer">
     <strong>Yuma Noritomo.</strong> <a href="https://www.rieb.kobe-u.ac.jp/academic/ra/dp/English/dp2025-19.html">Does the timing of productivity shocks in childhood affect educational attainment?</a> <i>Kanematsu Award</i>, <i>Nishijima Award</i>
