--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@ strong {
   </li>
 </ul>
 
+   📝 I have been contributing to <a href="https://x.com/dmeconsg"><font color="blue">Development Micro-econometrics Study Group</font></a> (Japanese), <a href="https://www.pnas.org/journal-club"><font color="blue">PNAS journal club</font></a> </p>
+                🏊🚴🏃 A passionate <i>IRONMAN</i> athelete, a proud finisher of Mont-Tremblant, Vitoria-Gasteiz, and Frankfurt.
 
     <!-- <ul> -->
       <!-- <li> -->
