--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ strong {
   </li>
 </ul>
 
-   📝 I have been contributing to <a href="https://x.com/dmeconsg"><font color="blue">Development Micro-econometrics Study Group</font></a> (Japanese), <a href="https://www.pnas.org/journal-club"><font color="blue">PNAS journal club</font></a> </p>
+   📝 I have been contributing to <a href="https://x.com/dmeconsg">Development Micro-econometrics Study Group</a> (Japanese), <a href="https://www.pnas.org/journal-club">PNAS journal club</a> </p>
                 🏊🚴🏃 A passionate <i>IRONMAN</i> athelete, a proud finisher of Mont-Tremblant, Vitoria-Gasteiz, and Frankfurt.
 
     <!-- <ul> -->
