--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ strong {
       <img src="Yuma_shoats.jpg" alt="Profile Picture" class="profile-pic" />
       <div>
         <h3>Yuma Noritomo</h3>
-                <p> I'm Yuma, a PhD student at Dyson, Cornell. I visited PSE in Fall 2024, with shorter visits at Utrecht, Wageningen, and ILRI. Reach out to me at yn266[at]cornell.edu </p>
+                <p> I'm a PhD student at Dyson, Cornell, fortunate to be advised by Chris Barrett, Brian Dillon, Johannes Haushofer, and Karlijn Morsink. I visited PSE in Fall 2024, with shorter visits to Utrecht, Wageningen, and ILRI. You can reach me at yn266[at]cornell.edu. </p>
                 <p> My research focuses on strategies to reduce chronic poverty through human capital accumulation in low-income, challenging settings. </p>                        
       </div>
     </div>
