--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ strong {
       <div>
         <h3>Yuma Noritomo</h3>
                 <p> I'm a PhD student in Development Economics at Dyson, Cornell, fortunate to be advised by Chris Barrett, Brian Dillon, Johannes Haushofer, and Karlijn Morsink. I visited PSE in Fall 2024, with shorter visits to Utrecht and Wageningen. Reach me at yn266[at]cornell.edu. </p>
-                <p> My research focuses on strategies to reduce chronic poverty through human capital accumulation in low-income, challenging settings. </p>                        
+                <p> My research focuses on strategies to reduce chronic poverty and suffering by promoting human capital accumulation in low-income, challenging environments. </p>                        
       </div>
     </div>
 
@@ -108,14 +108,14 @@ strong {
     <strong>Yoshito Takasaki, Yuma Noritomo, Oliver Coomes, and Christian Abizaid.</strong> Site selection causes bias in policy-oriented social science. <i>Submitted</i>
   </li>
   <li class="spacer">
-    <strong>Yuma Noritomo and Karlijn Morsink.</strong> Trading off human capital versus productive asset investment: perceptions of risk and return.
+    <strong>Yuma Noritomo, Karlijn Morsink, and Kelvin Shikuku.</strong> Trading off human capital versus productive asset investment: perceptions of risk and return.
   </li>
 </ul>
 
 <h4 id="publication">Publication</h4>
 <ul>
   <li class="spacer">
-    <strong>Jensen et al.</strong> <a href="https://www.sciencedirect.com/science/article/pii/S0306919225001149">Index-based livestock insurance to support pastoralists against droughts.</a> <i>Accepted at Food Policy</i>
+    <strong>Jensen et al.</strong> <a href="https://www.sciencedirect.com/science/article/pii/S0306919225001149">Index-based livestock insurance to support pastoralists against droughts.</a> <i> Food Policy</i>, 137, 102909.
   </li>
   <li class="spacer">
     <strong>Yuma Noritomo and Kazushi Takahashi (2020).</strong> <a href="https://www.tandfonline.com/doi/full/10.1080/00220388.2020.1736281">Can insurance payouts prevent a poverty trap? Evidence from randomised experiments in northern Kenya</a>, <i>The Journal of Development Studies</i>, 56(11), 2079-2096.
