--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ strong {
 <h4 id="publication">Publication</h4>
 <ul>
   <li class="spacer">
-    <strong>Jensen et al.</strong> <a href="https://www.sciencedirect.com/science/article/pii/S0306919225001149">Index-based livestock insurance to support pastoralists against droughts.</a> <i> Food Policy</i>, 137, 102909.
+    <strong>Jensen et al. (2025).</strong> <a href="https://www.sciencedirect.com/science/article/pii/S0306919225001149">Index-based livestock insurance to support pastoralists against droughts.</a> <i> Food Policy</i>, 137, 102909.
   </li>
   <li class="spacer">
     <strong>Yuma Noritomo and Kazushi Takahashi (2020).</strong> <a href="https://www.tandfonline.com/doi/full/10.1080/00220388.2020.1736281">Can insurance payouts prevent a poverty trap? Evidence from randomised experiments in northern Kenya</a>, <i>The Journal of Development Studies</i>, 56(11), 2079-2096.
