--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ strong {
         </details>   
 </li>
   <li class="spacer">
-    <strong>Takuya Hasebe, Yuma Noritomo, and Bilesha Weeraratne.</strong> <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5220631">Restricting mothers' international migration and human capital investment.</a> <i>Submitted</i>
+    <strong>Takuya Hasebe, Yuma Noritomo, and Bilesha Weeraratne.</strong> <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5220631">Restricting mothers' international migration and human capital investment.</a> <i>R&R at World Development</i>
   </li>
   <li class="spacer">
     <strong>Yoshito Takasaki, Yuma Noritomo, Oliver Coomes, and Christian Abizaid.</strong> Site selection causes bias in policy-oriented social science. <i>Submitted</i>
