--- a/index.html
+++ b/index.html
@@ -72,6 +72,14 @@ strong {
     }
   </style>
 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-S8DRRM0J6N"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-S8DRRM0J6N');
+  </script>
+
 </head>
 <body>
   <div class="container">
