--- a/index.html
+++ b/index.html
@@ -91,22 +91,20 @@ strong {
                 <p> My research focuses on strategies to reduce chronic poverty and suffering by promoting human capital accumulation in low-income, challenging environments. </p>                        
       </div>
     </div>
-
     <!-- <h4>About</h4>
     <p>
       I'm a Ph.D. student. <br/>
     </p> -->
-
     <h4>Working Paper / Work in Progress</h4>
 <ul>
   <li class="spacer">
     <strong>Yuma Noritomo.</strong> <a href="https://www.rieb.kobe-u.ac.jp/academic/ra/dp/English/dp2025-19.html">Does the timing of productivity shocks in childhood affect educational attainment?</a> <i>Kanematsu Award</i>, <i>Nishijima Award</i>
   </li>
   <li class="spacer">
-    <strong>Christopher Barrett, Nathan Jensen, Karlijn Morsink, Yuma Noritomo, Hyuk Harry Son, Rupsha Banerjee, and Nils Teufel.</strong> <a href="https://www.dropbox.com/scl/fi/nykh5bstdjtm1epwzi6vd/IBLI_Long-term_Barrett_et_al_2025March.pdf?rlkey=4yltzxx80e36lzbcpace8c1rx&st=4z3xsrn1&dl=0">Long-run effects of catastrophic drought insurance.</a> [<a href="https://www.dropbox.com/scl/fi/saqnzojxpej3ty6u2gqx1/Barrett_et_al_Long-run_IBLI.pdf?rlkey=4wjqk77bsv3yry4l32zg1lsxj&st=mdupdyax&dl=0">slide</a>] <i>Submitted</i>
+    <strong>Christopher Barrett, Nathan Jensen, Karlijn Morsink, Yuma Noritomo, Hyuk Harry Son, Rupsha Banerjee, and Nils Teufel.</strong> <a href="files/Long-term_paper.pdf" target="_blank">Long-run effects of catastrophic drought insurance</a> [<a href="Long-term_slide">slide</a>] <i>Submitted</i>
     <details> 
            <summary>Abstract</summary> 
-          <p>  We study the long-run effects of catastrophic drought insurance on pastoralist households in Kenya and Ethiopia. Instrumenting with randomized premium discounts, we estimate the impacts of insurance coverage a decade later. Insurance induced households to herd fewer small livestock like goats, typically used as precautionary savings, and generated a significant increase in children’s education. These effects are driven by households with small baseline herds, reflecting reduced child labor demand, as well as by suggestive positive income effects. These impacts stem primarily from reduced ex ante risk exposure and the behavioral change it induces, rather than from ex post indemnity payments. </p> 
+          <p> We study the long-run effects of catastrophic drought insurance on pastoralist households in Kenya and Ethiopia. Instrumenting with randomized premium discounts, we estimate the impacts of insurance coverage a decade later. Insurance induced households to herd fewer small livestock like goats, typically used as precautionary savings, and generated a significant increase in children’s education. These effects are driven by households with small baseline herds, reflecting reduced child labor demand, as well as by suggestive positive income effects. These impacts stem primarily from reduced ex ante risk exposure and the behavioral change it induces, rather than from ex post indemnity payments. </p> 
         </details>   
 </li>
   <li class="spacer">
