--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ strong {
 <body>
   <div class="container">
     <div class="header">
-      <img src="Yuma_shoats.jpg" alt="Profile Picture" class="profile-pic" />
+      <img src="files/Yuma_shoats.jpg" alt="Profile Picture" class="profile-pic" />
       <div>
         <h3>Yuma Noritomo</h3>
                 <p> I’m a PhD student in Development Economics at Dyson, Cornell, and I’m fortunate to be advised by Chris Barrett, Brian Dillon, Johannes Haushofer, and Karlijn Morsink. I had the opportunity to visit the development research groups at PSE and Wageningen. Reach me at yn266[at]cornell.edu. </p>
