--- a/index.html
+++ b/index.html
@@ -84,17 +84,13 @@ strong {
 <body>
   <div class="container">
     <div class="header">
-      <img src="files/Yuma_shoats.jpg" alt="Profile Picture" class="profile-pic" />
+        <img src="file/Yuma_shoats.jpg" alt="Profile Picture" class="profile-pic" />
       <div>
         <h3>Yuma Noritomo</h3>
                 <p> I’m a PhD student in Development Economics at Dyson, Cornell, and I’m fortunate to be advised by Chris Barrett, Brian Dillon, Johannes Haushofer, and Karlijn Morsink. I had the opportunity to visit the development research groups at PSE and Wageningen. Reach me at yn266[at]cornell.edu. </p>
                 <p> My research focuses on strategies to reduce chronic poverty and suffering by promoting human capital accumulation in low-income, challenging environments. </p>                        
       </div>
     </div>
-    <!-- <h4>About</h4>
-    <p>
-      I'm a Ph.D. student. <br/>
-    </p> -->
     <h4>Working Paper / Work in Progress</h4>
 <ul>
   <li class="spacer">
