--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ strong {
 </ul>
 
    📝 I have been contributing to <a href="https://x.com/dmeconsg">Development Micro-econometrics Study Group</a> (Japanese), <a href="https://www.pnas.org/journal-club">PNAS journal club</a> </p>
-                🏊🚴🏃 A passionate <i>IRONMAN</i> athelete, a proud finisher of Mont-Tremblant, Vitoria-Gasteiz, and Frankfurt.
+                🏊🚴🏃 An <i>IRONMAN</i> athelete, a proud finisher of Mont-Tremblant, Vitoria-Gasteiz, and Frankfurt.
 
     <!-- <ul> -->
       <!-- <li> -->
