--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@ strong {
 <ul>
   <li class="spacer">
     <strong>Yuma Noritomo.</strong> <a href="https://www.rieb.kobe-u.ac.jp/academic/ra/dp/English/dp2025-19.html">Does the timing of productivity shocks in childhood affect educational attainment?</a> <i>Kanematsu Award</i>, <i>Nishijima Award</i>
+  <details>
+           <summary>Awards</summary> 
+          <p> Kanematsu Award, Nishijima Award </p> 
+        </details>   
   </li>
   <li class="spacer">
     <strong>Christopher Barrett, Nathan Jensen, Karlijn Morsink, Yuma Noritomo, Hyuk Harry Son, Rupsha Banerjee, and Nils Teufel.</strong> <a href="file/Long-term_paper.pdf" target="_blank">Long-run effects of catastrophic drought insurance</a> <i>Submitted</i>
@@ -105,6 +109,10 @@ strong {
 </li>
   <li class="spacer">
     <strong>Takuya Hasebe, Yuma Noritomo, and Bilesha Weeraratne.</strong> <a href="https://www.rieb.kobe-u.ac.jp/academic/ra/dp/English/dp2025-25.html">Restricting mothers' international migration and human capital investment.</a> <i>R&R at World Development</i>
+      <details>       <!-- [<a href="file/Long-term_slide.pdf">slide</a>] -->
+           <summary>Abstract</summary> 
+          <p> International migration offers significant economic opportunities for developing countries, but it can also separate parents from their children, potentially harming child development. This paper examines the effects of restricting mothers' international migration on left-behind children, leveraging a Sri Lankan unique policy that restricted mothers with children under age five from migrating abroad for employment. Using a difference-in-differences approach, the results reveal the following: First, the policy reduces international migration, increasing mothers' presence at home. Second, policy exposure leads to better healthcare outcomes, including a significant reduction in inpatient stays, particularly treatment for illnesses. This improvement appears to result from increased childcare and monitoring by mothers. Although the policy decreases remittances from abroad, this reduction is offset by an increase in domestic remittances. Furthermore, we find evidence of positive spillovers on non-targeted children with younger, policy-targeted siblings, as indicated by reduced grade retention. These findings highlight the trade-offs between a mother's presence and the economic opportunities associated with international migration in shaping human capital development. </p> 
+        </details>   
   </li>
   <li class="spacer">
     <strong>Yoshito Takasaki, Yuma Noritomo, Oliver Coomes, and Christian Abizaid.</strong> Site selection causes bias in policy-oriented social science. <i>Submitted</i>
