--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ strong {
     <h4>Working Paper / Work in Progress</h4>
 <ul>
   <li class="spacer">
-    <strong>Yuma Noritomo.</strong> <a href="https://www.rieb.kobe-u.ac.jp/academic/ra/dp/English/dp2025-19.html">Does the timing of productivity shocks in childhood affect educational attainment?</a> <i>Kanematsu Award</i>, <i>Nishijima Award</i>
+    <strong>Yuma Noritomo.</strong> <a href="https://www.rieb.kobe-u.ac.jp/academic/ra/dp/English/dp2025-19.html">Does the timing of productivity shocks in childhood affect educational attainment?</a> 
   <details>
            <summary>Awards</summary> 
           <p> Kanematsu Award, Nishijima Award </p> 
