--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ strong {
         </details>   
   </li>
   <li class="spacer">
-    <strong>Christopher Barrett, Nathan Jensen, Karlijn Morsink, Yuma Noritomo, Hyuk Harry Son, Rupsha Banerjee, and Nils Teufel.</strong> <a href="file/Long-term_paper.pdf" target="_blank">Long-run effects of catastrophic drought insurance</a> <i>Submitted</i>
+    <strong>Christopher Barrett, Nathan Jensen, Karlijn Morsink, Yuma Noritomo, Hyuk Harry Son, Rupsha Banerjee, and Nils Teufel.</strong> <a href="file/Long-term_paper.pdf" target="_blank">Long-run effects of catastrophic drought insurance</a> <a href="https://www.financialprotectionforum.org/blog/pilot-scale-how-research-powers-pastoralists-progress"> WB blog</a> <i>Submitted</i>
     <details>       <!-- [<a href="file/Long-term_slide.pdf">slide</a>] -->
            <summary>Abstract</summary> 
           <p> We study the long-run effects of catastrophic drought insurance on pastoralist households in Kenya and Ethiopia. Instrumenting with randomized premium discounts, we estimate the impacts of insurance coverage a decade later. Insurance induced households to herd fewer small livestock like goats, typically used as precautionary savings, and generated a significant increase in children’s education. These effects are driven by households with small baseline herds, reflecting reduced child labor demand, as well as by suggestive positive income effects. These impacts stem primarily from reduced ex ante risk exposure and the behavioral change it induces, rather than from ex post indemnity payments. </p> 
