--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ strong {
 <h4 id="publication">Publication</h4>
 <ul>
     <li class="spacer">
-    <strong>Takuya Hasebe, Yuma Noritomo, and Bilesha Weeraratne.</strong> <a href="https://www.rieb.kobe-u.ac.jp/academic/ra/dp/English/dp2025-25.html">Restricting mothers' international migration and human capital investment.</a> <i> Accepted at World Development</i>
+    <strong>Takuya Hasebe, Yuma Noritomo, and Bilesha Weeraratne.</strong> <a href="file/WD_SriLanka_yn.pdf">Restricting mothers' international migration and human capital investment.</a> <i> Accepted at World Development</i>
   </li>
   <li class="spacer">
     <strong>Jensen et al. (2025).</strong> <a href="https://www.sciencedirect.com/science/article/pii/S0306919225001149">Index-based livestock insurance to support pastoralists against droughts.</a> <i> Food Policy</i>, 137, 102909.
