--- a/index.html
+++ b/index.html
@@ -93,6 +93,20 @@ strong {
     </div>
     <h4>Working Paper / Work in Progress</h4>
 <ul>
+    <li class="spacer">
+    <strong>Yuma Noritomo, Karlijn Morsink, and Kelvin Shikuku.</strong> Trading off human capital versus productive asset investment: perceptions of risk and return.
+   <details>
+           <summary>Funding</summary> 
+          <p> International Research Travel Grants (Einaudi Center), Research Travel Grant (Graduate School, Cornell University)*2, Academic Enrichment Program (Cornell CALS), Graduate Research Funding (The Center for the Study of Inequality)  </p> 
+        </details>   
+  </li>
+    <li class="spacer">
+    <strong>Christopher Barrett, Nathan Jensen, Karlijn Morsink, Yuma Noritomo, Hyuk Harry Son, Rupsha Banerjee, and Nils Teufel.</strong> <a href="file/Long-term_paper.pdf" target="_blank">Long-run effects of catastrophic drought insurance</a> [<a href="file/CEAR_IBLI_longterm_slide_yn.pdf" target="_blank">slide</a>] [<a href="https://www.financialprotectionforum.org/blog/pilot-scale-how-research-powers-pastoralists-progress">WB blog</a>] <i>Submitted</i>
+    <details>       <!-- [<a href="file/Long-term_slide.pdf">slide</a>] -->
+           <summary>Abstract</summary> 
+          <p> We study the long-run effects of catastrophic drought insurance on pastoralist households in Kenya and Ethiopia. Instrumenting with randomized premium discounts, we estimate the impacts of insurance coverage a decade later. Insurance coverage induced households to herd fewer small livestock like goats, typically used as precautionary savings in the short run, an effect which persisted in the long-run. Insurance also generated a significant long-run increase in children’s education. These effects are driven by households with small baseline herds, reflecting reduced child labor demand. We provide suggestive evidence that these impacts stem from reduced \textit{ex ante} risk exposure and the behavioral change it induces, rather than from \textit{ex post} indemnity payments.  </p> 
+        </details>   
+</li>
   <li class="spacer">
     <strong>Yuma Noritomo.</strong> <a href="https://www.rieb.kobe-u.ac.jp/academic/ra/dp/English/dp2025-19.html">Does the timing of productivity shocks in childhood affect educational attainment?</a> 
   <details>
@@ -101,17 +115,7 @@ strong {
         </details>   
   </li>
   <li class="spacer">
-    <strong>Christopher Barrett, Nathan Jensen, Karlijn Morsink, Yuma Noritomo, Hyuk Harry Son, Rupsha Banerjee, and Nils Teufel.</strong> <a href="file/Long-term_paper.pdf" target="_blank">Long-run effects of catastrophic drought insurance</a> [<a href="file/CEAR_IBLI_longterm_slide_yn.pdf" target="_blank">slide</a>] [<a href="https://www.financialprotectionforum.org/blog/pilot-scale-how-research-powers-pastoralists-progress">WB blog</a>] <i>Submitted</i>
-    <details>       <!-- [<a href="file/Long-term_slide.pdf">slide</a>] -->
-           <summary>Abstract</summary> 
-          <p> We study the long-run effects of catastrophic drought insurance on pastoralist households in Kenya and Ethiopia. Instrumenting with randomized premium discounts, we estimate the impacts of insurance coverage a decade later. Insurance induced households to herd fewer small livestock like goats, typically used as precautionary savings, and generated a significant increase in children’s education. These effects are driven by households with small baseline herds, reflecting reduced child labor demand, as well as by suggestive positive income effects. These impacts stem primarily from reduced ex ante risk exposure and the behavioral change it induces, rather than from ex post indemnity payments. </p> 
-        </details>   
-</li>
-  <li class="spacer">
     <strong>Yoshito Takasaki, Yuma Noritomo, Oliver Coomes, and Christian Abizaid.</strong> Site selection causes bias in policy-oriented social science. <i>Submitted</i>
-  </li>
-  <li class="spacer">
-    <strong>Yuma Noritomo, Karlijn Morsink, and Kelvin Shikuku.</strong> Trading off human capital versus productive asset investment: perceptions of risk and return.
   </li>
 </ul>
 
