longterm paper update
longterm paper update

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ strong {
                 <p> My research focuses on strategies to reduce chronic poverty and suffering by promoting human capital accumulation in low-income, challenging environments. </p>                        
       </div>
     </div>
-    <h4>Working Paper / Work in Progress</h4>
+    <h4> Work in Progress</h4>
 <ul>
     <li class="spacer">
     <strong>Yuma Noritomo, Karlijn Morsink, and Kelvin Shikuku.</strong> Trading off human capital versus productive asset investment: perceptions of risk and return.
@@ -101,7 +101,7 @@ strong {
         </details>   
   </li>
     <li class="spacer">
-    <strong>Christopher Barrett, Nathan Jensen, Karlijn Morsink, Yuma Noritomo, Hyuk Harry Son, Rupsha Banerjee, and Nils Teufel.</strong> <a href="file/Long-term_paper.pdf" target="_blank">Long-run effects of catastrophic drought insurance</a> [<a href="file/CEAR_IBLI_longterm_slide_yn.pdf" target="_blank">slide</a>] [<a href="https://www.financialprotectionforum.org/blog/pilot-scale-how-research-powers-pastoralists-progress">WB blog</a>] <i>Submitted</i>
+    <strong> Barrett et al. </strong> <a href="file/Long-term_paper.pdf" target="_blank">Long-run effects of catastrophic drought insurance</a> [<a href="file/CEAR_IBLI_longterm_slide_yn.pdf" target="_blank">slide</a>] [<a href="https://www.financialprotectionforum.org/blog/pilot-scale-how-research-powers-pastoralists-progress">World Bank blog</a>] <i>Submitted</i>
     <details>       <!-- [<a href="file/Long-term_slide.pdf">slide</a>] -->
            <summary>Abstract</summary> 
           <p> We study the long-run effects of catastrophic drought insurance on pastoralist households in Kenya and Ethiopia. Instrumenting with randomized premium discounts, we estimate the impacts of insurance coverage a decade later. Insurance coverage induced households to herd fewer small livestock like goats, typically used as precautionary savings in the short run, an effect which persisted in the long-run. Insurance also generated a significant long-run increase in children’s education. These effects are driven by households with small baseline herds, reflecting reduced child labor demand. We provide suggestive evidence that these impacts stem from reduced \textit{ex ante} risk exposure and the behavioral change it induces, rather than from \textit{ex post} indemnity payments.  </p> 
