--- a/index.html
+++ b/index.html
@@ -108,11 +108,13 @@ strong {
         </details>   
 </li>
   <li class="spacer">
-    <strong>Yuma Noritomo.</strong> <a href="file/draft_drought_humancapital_260110_EJ.pdf" target="_blank">Does the timing of productivity shocks in childhood affect educational attainment?</a> i>Submitted</i>
+    <strong>Yuma Noritomo.</strong> <a href="file/draft_drought_humancapital_260110_EJ.pdf" target="_blank">Does the timing of productivity shocks in childhood affect educational attainment?</a> <i>Submitted</i>
   <details>
                <summary>Abstract</summary> 
           <p> Poor households in developing countries often face trade-offs between children’s schooling and labor. Using data on pastoralist households in rural Kenya and Ethiopia–where livestock require care and generate within-household demand for child labor–I exploit quasi-random variation in rangeland grazing conditions that affects both household income and labor demand to estimate the impact of productivity shocks during childhood on educational attainment. Positive productivity shocks during preschool ages increase completed schooling, primarily by raising the probability of primary school entry, consistent with the relaxation of short-termliquidity constraints. In contrast, negative productivity shocks during primary school ages– when children are most likely to exit school and child labor productivity increases–are associated with higher educational attainment. This effect appears to operate through significant reductions in livestock holdings that lower subsequent demand for boys’ labor in animal husbandry and probably reinforce the effect by inducing sedentarization. These results highlight the importance of non-separable household production and human capital decisions in shaping educational outcomes during critical stages of childhood in low-income settings. </p> 
-           <summary>Awards</summary> 
+        </details>   
+          <details>   
+          <summary>Awards</summary> 
           <p> Kanematsu Award, Nishijima Award </p> 
         </details>   
   </li>
